--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
 				<div class="card-right animjs3">
 					<div class="card-hero bgsecondary">
 						<h3 class="mb-2 colorbg">
-							Automação de tarefas</h3>
+							Automatização de tarefas</h3>
 						<div class="mb-3 d-flex flex-wrap" style="gap: 6px;">
 							<span class="type2">Velocidade</span>
 							<span class="type2">Confiavel</span>
 							<span class="type2">Exato</span>
 						</div>
-						<p  class="mb-3 text-hero">Bots confiaveis</p>
+						<p  class="mb-3 text-hero">Automatização de tarefas</p>
 						<div class="toggle1 hover01 voir_plus" data-toggle="modal" data-target="#modal2">
 							<figure style="border-radius: 20px;"><img src="./img/equisafe.png" alt="Maquettes mobile"></figure>
 							<div class="d-flex justify-content-end align-items-center">
@@ -221,7 +221,7 @@
 				<p>Me chamo Ezequiel, sou formado em análise e desenvolvimento de sistemas, pós-graduado em análise de dados.</p>
 
 
-				<h3 class="mb-4 mt-5">Principais competencias</h3>
+				<h3 class="mb-4 mt-5">Principais competências</h3>
 				<div class="skills">
 					<div>
 						<h4 class="mb-2">Desenvolvimento web<span class="primary"> responsivo</span> :</h4>
