--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 			<div class="card-hero-cont">
 				<div class="card-left">
 					<h2 class="mb-3 animjs3">Meus serviços.</h2>
-					<p class="mb-4 p-center animjs3">Criação e personalização de sites profisionais e design elegante.</p>
+					<p class="mb-4 p-center animjs3">Criação e personalização de sites profisionais.</p>
 					
 					<div class="card-hero animjs3">
 						<h3 class="mb-2 colorbg">Criação de sites responsivos</h3>
 						<div class="mb-3 d-flex flex-wrap" style="gap: 6px;">
-							<span class="type2">Bonitos</span>
+							<span class="type2">Dinâmicos</span>
 							<span class="type2">Atrativos</span>
 							<span class="type2">Customizáveis</span>
 						</div>
@@ -297,7 +297,7 @@
 					<span class="type">UX Design</span>
 					<span class="type">UI Design</span>
 				</div>
-				<p class="mb-3">Criação de um site moderno e responsivo, respeitando o design e o padrão da marca.
+				<p class="mb-3">Criação de um site moderno e responsivo.
 					 
 				</p>
 				<div class="toggle1 hover01 voir_plus" data-toggle="modal" data-target="#modal1">
@@ -317,7 +317,7 @@
 					<span class="type">UI Design</span>
 					<span class="type bgsecondary">Front-end</span>
 				</div>
-				<p class="mb-3">A criação desse lindo site que você está acessando.
+				<p class="mb-3">A criação desse site que você está acessando.
 				</p>
 				<div class="toggle1 hover01 voir_plus" data-toggle="modal" data-target="#modal6">
 					<figure><img src="./img/portfolio0.png" alt="portfolio"></figure>
