--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 				<div class="card-right animjs3">
 					<div class="card-hero bgsecondary">
 						<h3 class="mb-2 colorbg">
-							Automatização de tarefas</h3>
+							Automação via RPA</h3>
 						<div class="mb-3 d-flex flex-wrap" style="gap: 6px;">
 							<span class="type2">Velocidade</span>
-							<span class="type2">Confiavel</span>
-							<span class="type2">Exato</span>
+							<span class="type2">Confiabilidade</span>
+							<span class="type2">Exatidão</span>
 						</div>
 						<p  class="mb-3 text-hero">Automatização de tarefas</p>
 						<div class="toggle1 hover01 voir_plus" data-toggle="modal" data-target="#modal2">
@@ -183,9 +183,9 @@
 											<div>
 												<ul>
 													<li>Diminuição de tarefas repetitivas</li>
-													<li>Baixo indice de erro</li>
-													<li>Bot com inteligencia para realizar comandos remotamente.</li>
-													<li>Velocidade surreal</li>
+													<li>Baixo índice de erros</li>
+													<li>Bot com inteligência para realizar comandos remotamente.</li>
+													<li>Velocidade acima da média</li>
 												</ul>
 											</div>
 										</div>
@@ -233,10 +233,11 @@
 						</ul>
 					</div>
 					<div>
-						<h4 class="mb-2">BOTS<span class="primary"> automatizados</span> :</h4>
+						<h4 class="mb-2">AUTOMAÇÃO COM<span class="primary"> RPA</span> :</h4>
 						<ul>
 							<li>Python.</li>
-							<li>Inteligencia artificial.</li>
+							<li>Inteligência artificial.</li>
+							<li>Machine Learning.</li>
 							<li>Linux.</li>
 						</ul>
 					</div>
