--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 			<p>Entre em contato e eu respondo essas questões !</p>
 			<div class="social-icon row justify-content-between mt-5 pt-5">
 				<div class="text-center m-3" style="width: 250px;">
-					<a class="mb-3" href="mailto:zekicarvalho@gmail.com" target="_blank"><i class="fa-solid fa-envelope text-white"></i></a>
+					<a class="mb-3" href="mailto:ezequielalves32@gmail.com" target="_blank"><i class="fa-solid fa-envelope text-white"></i></a>
 					<h4>Email</h4>
 					<p>ezequielalves32@gmail.com</p>
 				</div>
