--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
 												<ul>
 													<li>Design elegante</li>
 													<li>Acessivel em qualquer dispositivo</li>
-													<li>Atraia clientes exigentes</li>
-													<li>Identidade visual inconfundivel</li>
-													<li>Respeita a acessibilidade e garante desempenho</li>
-													<li>Modernidade e estabilidade</li>
-													<li>Suporte para qualquer imprevisto</li>
+													<li>Respeita a acessibilidade</li>
 												</ul>
 											</div>
 										</div>
