--- a/index.html
+++ b/index.html
@@ -247,17 +247,17 @@
 				<article class="wrapper mt-4">
 					<div class="marquee">
 						<div class="marquee__group">
-							<i class="fa-brands fa-figma fa-4x"></i>
-							<i class="fa-brands fa-dribbble fa-4x"></i>
-							<i class="fa-brands fa-behance fa-4x"></i>
-							<i class="fa-brands fa-pinterest-p fa-4x"></i>
+							<i class="fa-brands fa-python fa-4x"></i>
+							<i class="fa-brands fa-php fa-4x"></i>
+							<i class="fa-brands fa-bootstrap fa-4x"></i>
+							<i class="fa-brands fa-robot fa-4x"></i>
 							<i class="fa-brands fa-github fa-4x"></i>
 						</div>
 						<div aria-hidden="true" class="marquee__group">
-							<i class="fa-brands fa-figma fa-4x"></i>
-							<i class="fa-brands fa-dribbble fa-4x"></i>
-							<i class="fa-brands fa-behance fa-4x"></i>
-							<i class="fa-brands fa-pinterest-p fa-4x"></i>
+							<i class="fa-brands fa-python fa-4x"></i>
+							<i class="fa-brands fa-php fa-4x"></i>
+							<i class="fa-brands fa-bootstrap fa-4x"></i>
+							<i class="fa-brands fa-robot fa-4x"></i>
 							<i class="fa-brands fa-github fa-4x"></i>
 						</div>
 					</div>
