--- a/index.html
+++ b/index.html
@@ -250,31 +250,31 @@
 							<i class="fa-brands fa-python fa-4x"></i>
 							<i class="fa-brands fa-php fa-4x"></i>
 							<i class="fa-brands fa-bootstrap fa-4x"></i>
-							<i class="fa-brands fa-robot fa-4x"></i>
+							<i class="fa-brands fa-js fa-4x"></i>
 							<i class="fa-brands fa-github fa-4x"></i>
 						</div>
 						<div aria-hidden="true" class="marquee__group">
 							<i class="fa-brands fa-python fa-4x"></i>
 							<i class="fa-brands fa-php fa-4x"></i>
 							<i class="fa-brands fa-bootstrap fa-4x"></i>
-							<i class="fa-brands fa-robot fa-4x"></i>
+							<i class="fa-brands fa-js fa-4x"></i>
 							<i class="fa-brands fa-github fa-4x"></i>
 						</div>
 					</div>
 					<div class="marquee marquee--reverse">
 						<div class="marquee__group">
-							<i class="fa-brands fa-trello fa-4x"></i>
+							<i class="fa-brands fa-wordpress fa-4x"></i>
 							<i class="fa-brands fa-css3-alt fa-4x"></i>
 							<i class="fa-brands fa-html5 fa-4x"></i>
-							<i class="fa-brands fa-codepen fa-4x"></i>
+							<i class="fa-brands fa-code fa-4x"></i>
 							<i class="fa-brands fa-gitlab fa-4x"></i>
 						</div>
 					
 						<div aria-hidden="true" class="marquee__group">
-							<i class="fa-brands fa-trello fa-4x"></i>
+							<i class="fa-brands fa-wordpress fa-4x"></i>
 							<i class="fa-brands fa-css3-alt fa-4x"></i>
 							<i class="fa-brands fa-html5 fa-4x"></i>
-							<i class="fa-brands fa-codepen fa-4x"></i>
+							<i class="fa-brands fa-code fa-4x"></i>
 							<i class="fa-brands fa-gitlab fa-4x"></i>
 						</div>
 					</div>
